Made some changes

--- a/about.html
+++ b/about.html
@@ -64,8 +64,8 @@ window.onclick = function(event) {
       <p class="first-pullquote">ParkApps is a partnership created to build tools, applications and games for teaching and learning in natural settings like National, State, and Local parks. The overarching goal is to enhance our understanding of creation through the use of innovative tools and technologies.</p>
       <p>ParkApps first application is a tool called Park-n-Discover (PND). It is a collaborative project between Kent State University, the Cuyahoga Valley National Park, and the Cleveland MetroParks and is funded by a grant from the National Science Foundation. PND is a GPS-enabled, mobile application that provides park visitors with an immersive, informal learning experience. PND gives visitors access to just-in-time information as they explore various geologic or historical landscapes and as they encountered unknown plants and animals. </p>
       <p>They <a href="team.html">have</a> the ability to follow pre-created adventures that guide them through asking and answering important scientific questions about biology, geology, mathematics, etc. In addition to seeking and gaining information, visitors can join a community of citizen scientists, supporting science efforts by uploading photos of plants, animals, and rock formations during their visit.</p>
-      <br></div>
-      <a href="team.html"><button>Our Team</button></a>
+    
+      <a href="team.html"><button>Our Team</button></a></div>
   <div class="about-c2">
     <img src="iphone.png" class="fix"/>
   </div>
