--- a/team.html
+++ b/team.html
@@ -59,57 +59,27 @@ window.onclick = function(event) {
 
 </head>
 <body>
-    <p class="breadcrumb"><a href="about.html">About</a> > <a href="team.html">Our Team</a></p>
+
+<p class="breadcrumb"><a href="about.html">About</a> > <a href="team.html">Our Team</a></p>
       <h1 class="first">Our Team</h1>
       <h3>Kent State University Investigators</h3>
-<div class="section">
-  	<div class="col span_1_of_6">
-  	<figure><img class="team" src="team/rickferdig.png"></figure>
-    <figcaption>Rick Ferdig</figcaption>
-  	</div>
-  	<div class="col span_1_of_6">
-      <figure><img class="team" src="team/bridgetmulvey.png"></figure>
-      <figcaption>Bridget Mulvey</figcaption>
-  	</div>
-  	<div class="col span_1_of_6">
-      <figure><img class="team" src="team/drchengchanglu.png"></figure>
-      <figcaption>Dr. Cheng-Chang Lu</figcaption>
-  	</div>
-  	<div class="col span_1_of_6">
-      <figure><img class="team" src="team/annettekratcoski.jpg"></figure>
-      <figcaption>Annette Kratcoski</figcaption>
-  	</div>
-
+<div class="group">
+  	<a class="team" href="ferdig.html"><figure class="tint"><img src="team/rickferdig.png">
+    <figcaption>Dr. Rick Ferdig</figcaption></a></figure>
   </div>
+  <div class="group">
+    	<a class="team" href="ferdig.html"><figure class="tint"><img src="team/bridgetmulvey.png">
+      <figcaption>Dr. Bridget Mulvey</figcaption></a></figure>
+    </div>
+    <div class="group">
+      	<a class="team" href="ferdig.html"><figure class="tint"><img src="team/drchengchanglu.png">
+        <figcaption>Dr. Cheng-Chang Lu</figcaption></a></figure>
+      </div>
+      <div class="group">
+        	<a class="team" href="ferdig.html"><figure class="tint"><img src="team/annettekratcoski.jpg">
+          <figcaption>Dr. Annette Kratcoski</figcaption></a></figure>
+        </div>
 
-    <h3>Park Collaborators</h3>
-  <div class="section">
-      	<div class="col span_1_of_6">
-      	<figure><img class="team" src="team/rickferdig.png"></figure>
-        <figcaption>Rick Ferdig</figcaption>
-      	</div>
-      	<div class="col span_1_of_6">
-          <figure><img class="team" src="team/rickferdig.png"></figure>
-          <figcaption>Rick Ferdig</figcaption>
-      	</div>
-      	<div class="col span_1_of_6">
-          <figure><img class="team" src="team/rickferdig.png"></figure>
-          <figcaption>Rick Ferdig</figcaption>
-      	</div>
-      	<div class="col span_1_of_6">
-          <figure><img class="team" src="team/rickferdig.png"></figure>
-          <figcaption>Rick Ferdig</figcaption>
-      	</div>
-      	<div class="col span_1_of_6">
-          <figure><img class="team" src="team/rickferdig.png"></figure>
-          <figcaption>Rick Ferdig</figcaption>
-      	</div>
-      	<div class="col span_1_of_6">
-          <figure><img class="team" src="team/rickferdig.png"></figure>
-          <figcaption>Rick Ferdig</figcaption>
-      </div></div>
-
-      <div class="spacer"></div>
 
 
 
