--- a/index.html
+++ b/index.html
@@ -3,27 +3,22 @@
   <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
-    <title>The Unaffordable Wedding</title>
+    <title>ParkApps</title>
         <link rel="stylesheet" href="css/stylelanding.css">
 
 </head>
 <body>
-    <div id="axis">
+<div id="wrap">
+    <center><div id="axis">
     <div class="box fade-in one">
-    <center>
 <h1>Introducing ParkApps NE Ohio</h1>
 <h2>Introducing <br> ParkApps NE Ohio</h2>
-<a href="about.html" class="button"><div id="button">Explore</div></a></center>
-<div class="img">
+<a href="about.html" class="button"><div id="button">Explore</div></a>
 <img src="iphone.png">
-</div></center>
-
-    <body>
-    </div>
-    </div>
+</center>
+</div>
 
 
-    </body>
 </body>
 
 </html>
